# Cognitive-Load

./: .dockerignore  .gitignore  Makefile  README.md  docker-compose.yml  pipeline_design_notes.md  pyproject.toml  requirements.txt  results_report.md
.github/workflows/: ci.yml
docker/: docker-compose.yml
docker/prometheus/: prometheus.yml
docs/: CogLoad_Documentation.docx
k8s/: 00-namespace.yml  01-configmap.yml  02-iep2.yml  03-iep1.yml  04-eep.yml  05-monitoring.yml  cluster.yml
notebooks/: EDA.ipynb  dataset.ipynb  models.ipynb
scripts/: build_combined_docx.py  build_features.py  create_iam_role.sh  demo_s24_stream.py  export_model_to_s3.py  push_iep1.sh  push_images.sh  register_test_model.py  rollback_champion.py  run_e2e.sh  run_experiments.py  select_best.py  sync_ssm_to_k8s_secret.sh  train_loso.py
service-mounts/: prometheus.yml
serving/eep/: Dockerfile  main.py
serving/iep1_inference/: Dockerfile  main.py  start.sh
serving/iep2_calibration/: Dockerfile  main.py
src/cogload/: config.py  experiment.py  pipeline.py
src/cogload.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/cogload/data/: alignment.py  loader.py
src/cogload/evaluation/: loso.py  metrics.py  selection.py
src/cogload/features/: bvp.py  eda.py  extract.py  temp.py  windowing.py
src/cogload/models/: ensemble.py  xgboost_model.py
tests/: test_alignment.py  test_leakage.py  test_metrics.py  test_windowing.py
tests/e2e/: test_e2e.py
tests/integration/: conftest.py  test_services.py
tests/serving/: test_eep.py  test_iep1_inference.py  test_iep2_calibration.py
(+6 files in other folders)
