[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cogload"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.26",
    "scipy>=1.11",
    "neurokit2>=0.2",
    "xgboost>=2.0",
    "scikit-learn>=1.3",
    "mlflow>=3.0",
    "matplotlib>=3.7",
    "pyarrow>=14.0",
    "tqdm>=4.65",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=5.0"]

[tool.setuptools.packages.find]
where = ["src"]
